--- a/src/client/app/territory/list/territory.list.html
+++ b/src/client/app/territory/list/territory.list.html
@@ -11,7 +11,7 @@
     </div>
     <div class="list-group">
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4" ng-repeat="territory in vm.filteredTerritories">
-            <div class="list-group-item well">
+            <div class="list-group-item well" ng-click="vm.goToDetail(territory.num)">
                 <div class="row-content">
                     <h4 class="list-group-item-heading">
                             Territory #{{territory.num}}
@@ -24,7 +24,7 @@
                     </p>
                 </div>
                 <div class="row-picture pull-left">
-                    <img class="circle pull-left" src="/src/client/images/mapIcon.png" alt="icon" ng-click="vm.goToDetail(territory.num)">
+                    <img class="circle pull-left" src="/src/client/images/mapIcon.png" alt="icon">
                 </div>
             </div>
             <div class="list-group-separator"></div>
