--- a/src/client/app/territory/detail/territory.detail.html
+++ b/src/client/app/territory/detail/territory.detail.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <br>
-    <div class="well well-sm" ng-repeat="checkout in vm.territory.checkouts | orderBy:'-dateOut'">
+    <div class="well well-sm" ng-repeat="checkout in vm.territoryCheckOuts | orderBy:'-dateOut'">
         <div class="row">
             <div class="col-xs-12 col-sm-3">
                 <label>ID</label>
@@ -65,7 +65,7 @@
             </div>
             <br>
         </div>
-        <div class="row" ng-show="vm.checkout.is">
+        <div class="row" ng-show="checkout.isActive">
             <div class="col-sm-12 pull-right"> 
                 <button ng-click="vm.checkIn(vm.territory, checkout)" class="btn btn-default btn-sm btn-raised">Check-In</button>
             </div>
