--- a/src/client/index.html
+++ b/src/client/index.html
@@ -100,10 +100,13 @@
   <script src="/src/client/app/territory/detail/territory.detail.controller.js"></script>
   <script src="/src/client/app/territory/list/territory.list.controller.js"></script>
   <script src="/src/client/app/territory/models/address.js"></script>
+  <script src="/src/client/app/territory/models/checkOut.js"></script>
   <script src="/src/client/app/territory/models/territory.js"></script>
   <script src="/src/client/app/territory/models/unit.js"></script>
+  <script src="/src/client/app/territory/services/address.service.js"></script>
+  <script src="/src/client/app/territory/services/checkOut.service.js"></script>
+  <script src="/src/client/app/territory/services/territory.service.js"></script>
   <script src="/src/client/app/territory/territory.route.js"></script>
-  <script src="/src/client/app/territory/territory.service.js"></script>
   <script src="/src/client/app/territory/unit/territory.unit.controller.js"></script>
   <script src="/src/client/app/widgets/ht-widget-header.directive.js"></script>
   <!-- endinject -->
