--- a/src/client/app/territory/list/territory.list.html
+++ b/src/client/app/territory/list/territory.list.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="bs-component">
-                <a href="javascript:void(0)" class="btn btn-raised btn-default" ng-repeat="type in vm.territoryTypes" ng-click="vm.filterTerritory(type.value)">
+                <a href="javascript:void(0)" class="btn btn-info waves-effect waves-light" ng-repeat="type in vm.territoryTypes" ng-click="vm.filterTerritory(type.value)">
                 {{type.label}}
                 <div class="ripple-container"></div>
             </a>
@@ -12,33 +12,49 @@
     <div class=" well">
         <div class="row">
             <div class="col-xs-12">
-                <input type="text" placeholder="Territory number" ng-model="vm.newTerritoryNum">            
-            </div>
-            <div class="col-xs-12">
-                <button ng-click="vm.add(vm.newTerritoryNum)" class="btn btn-primary btn-raised  pull-right">New Territory</button>          
+                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#newTerritoryModal">Add Territory</button>
             </div>
         </div>
     </div>
     <hr>
-    <div class="list-group">
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4" ng-repeat="territory in vm.filteredTerritories">
-            <div class="list-group-item well" ng-click="vm.goToDetail(territory.num)">
-                <div class="row-content">
-                    <h4 class="list-group-item-heading">
-                            Territory #{{territory.num}}
-                        </h4>
-
-                    <p class="list-group-item-text">
-                        <span class="col-xs-12">Type: {{territory.type.label}}</span>
-                        <span class="col-xs-12">Status: {{territory.status}}</span>
-                        <span class="col-xs-12">Description: {{territory.description}}</span>
-                    </p>
-                </div>
-                <div class="row-picture pull-left">
-                    <img class="circle pull-left" src="/src/client/images/mapIcon.png" alt="icon">
-                </div>
+    <div class="row">
+        <div class="col-md-6" ng-repeat="territory in vm.filteredTerritories" ng-click="vm.goToDetail(territory.num)">
+            <div class="card-panel">
+                <a class="btn-floating btn-large waves-effect waves-light red pull-left">
+                    <i class="material-icons">{{territory.num}}</i>
+                </a>
+                <span class="blue-text text-darken-2">
+                Type: {{territory.type.label}}<br>
+                Status: {{territory.status}}<br>
+                Description: {{territory.description}}<br>
+            </span>
             </div>
-            <div class="list-group-separator"></div>
         </div>
     </div>
 </div>
+
+<!-- Trigger the modal with a button -->
+
+  <!-- Modal -->
+  <div class="modal fade" id="newTerritoryModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">New Territory</h4>
+        </div>
+        <div class="modal-body">
+            <div class="input-field col-md-12">
+                <input id="last_name" type="text" class="validate">
+                <label for="last_name">Territory Number</label>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button ng-click="vm.add(vm.newTerritoryNum)" class="btn btn-primary btn-raised  pull-right">Create Territory</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
