--- a/src/client/index.html
+++ b/src/client/index.html
@@ -10,17 +10,15 @@
       display: none!important;
     }
   </style>
-  <title ng-bind="title">helloworld</title>
+  <title ng-bind="title">Territory Assistant</title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
   <base href="/">
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
-
+  <link href="styles/mdb.css" rel="stylesheet">
   <!-- build:css styles/lib.css -->
   <!-- bower:css -->
-  <link rel="stylesheet" href="/bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css" />
-  <link rel="stylesheet" href="/bower_components/bootstrap-material-design/dist/css/ripples.css" />
   <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css" />
   <link rel="stylesheet" href="/bower_components/toastr/toastr.css" />
   <!-- endbower -->
@@ -55,9 +53,6 @@
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
-  <script src="/bower_components/bootstrap-material-design/dist/js/material.js"></script>
-  <script src="/bower_components/bootstrap-material-design/dist/js/ripples.js"></script>
   <script src="/bower_components/extras.angular.plus/ngplus-overlay.js"></script>
   <script src="/bower_components/moment/moment.js"></script>
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -67,6 +62,7 @@
   <script src="/bower_components/angularfire/dist/angularfire.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
+  <script type="text/javascript" src="js/mdb.js"></script>
 
   <!-- build:js js/app.js-->
   <!-- inject:js -->
@@ -114,11 +110,7 @@
   <!-- inject:templates:js -->
   <!-- endinject -->
   <!-- endbuild -->
-  <script>
-        $(function() {
-            $.material.init();
-        });      
-  </script>
+  
 </body>
 
 </html>
